--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -1,6 +1,8 @@
 // Our base and structure
 @import 'base/reset';
+@import 'base/variables';
 @import 'base/structure';
 
 // Our components
 @import 'components/header';
+@import 'components/nav';
