fixed nav for mobile
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/components/_nav.scss
+++ b/code/sass/components/_nav.scss
@@ -1,13 +1,16 @@
 .nav {
-	position: fixed;
 	top: 0;
 	right: 0;
 	left: 0;
-	height: 3rem;
 	z-index: 9;
 	overflow: hidden;
 	background-color: $color-Background-light;
 	border-bottom: 3px solid $color-Text;
+
+	@media screen and ( min-width: 650px ) {
+		position: fixed;
+		height: 3rem;
+	}
 
 	ul {
 		list-style: none;
@@ -15,14 +18,23 @@
 		margin: 0 2rem;
 		font-size: 1.125rem;
 		vertical-align: middle;
-		text-align: right;
+		text-align: center;
+		white-space: nowrap;
+
+		@media screen and ( min-width: 650px ) {
+			text-align: right;
+		}
 	}
 }
 
 .nav__link {
-	display: inline-block;
+	display: block;
 	vertical-align: middle;
 	margin: 0.7rem;
+
+	@media screen and ( min-width: 650px ) {
+		display: inline-block;
+	}
 }
 
 .nav__link--active a {
@@ -44,8 +56,25 @@
 	margin-bottom: 0.1rem;
 }
 
+.nav__link__github__text {
+	display: inline;
+
+	@media screen and ( min-width: 650px ) {
+		display: none;
+	}
+
+	@media screen and ( min-width: 710px ) {
+		display: inline;
+	}
+}
+
 .nav__link--fixed {
-	float: left;
+	margin-bottom: 2rem;
+
+	@media screen and ( min-width: 650px ) {
+		float: left;
+		margin-bottom: 0.7rem;
+	}
 }
 
 .nav__link--generated {
