added what section, fixed components
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/base/_variables.scss
+++ b/code/sass/base/_variables.scss
@@ -1,5 +1,7 @@
 // Colors
-$color-Background-light: #b2e1d8;
-$color-Background-dark: #00a887;
+$color-Hero-Background-light: #b2e1d8;
+$color-Hero-Background: #00a887;
 $color-Text: #06262d;
 $color-Background: #ededed;
+$color-Background-light: #f5f5f5;
+$color-Focus: #ff5400;
