--- a/code/sass/components/_nav.scss
+++ b/code/sass/components/_nav.scss
@@ -4,7 +4,7 @@
 	left: 0;
 	z-index: 9;
 	overflow: hidden;
-	background-color: $color-Background-light;
+	background-color: $color-Hero-Background-light;
 	border-bottom: 3px solid $color-Text;
 
 	@media screen and ( min-width: 650px ) {
