--- a/code/sass/base/_structure.scss
+++ b/code/sass/base/_structure.scss
@@ -3,8 +3,9 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	line-height: 1.2;
+	line-height: 1.6;
 	height: 100%;
+	color: $color-Text;
 }
 
 a {
@@ -13,4 +14,44 @@ a {
 	&:hover {
 		text-decoration: none;
 	}
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: normal;
+	line-height: 1.3;
+}
+
+h1 {
+	font-size: 2.5rem;
+}
+
+h2 {
+	font-size: 2.2rem;
+}
+
+h3 {
+	font-size: 1.9rem;
+}
+
+h4 {
+	font-size: 1.6rem;
+}
+
+h5 {
+	font-size: 1.2rem;
+}
+
+h6 {
+	font-size: 1rem;
+}
+
+
+p {
+	font-size: 1.125rem;
 }
