--- a/components/files/homepage/index.html
+++ b/components/files/homepage/index.html
@@ -213,7 +213,7 @@
     &lt;/svg&gt;
     &lt;p class=&quot;header__logo__description&quot;&gt;The react static site generator that separates editing and code concerns&lt;/p&gt;
   &lt;/div&gt;
-&lt;/header&gt;</code></pre></details></div><div id="homepage/what" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">homepage/what</h2><div class="cuttlebelle-docs__main__component__example"><div><section class="what"><div class="what__section what__section--left"><div><p>The year 1866 was signalised by a remarkable incident, a mysterious and puzzling phenomenon, which doubtless no one has yet forgotten. Not to mention rumours which agitated the maritime population and excited the public mind, even in the interior of continents, seafaring men were particularly excited. Merchants, common sailors, captains of vessels, skippers, both of Europe and America, naval officers of all countries, and the Governments of several States on the two continents, were deeply interested in the matter.</p> <p>For some time past vessels had been met by &quot;an enormous thing,&quot; a long object, spindle-shaped, occasionally phosphorescent, and infinitely larger and more rapid in its movements than a whale.</p> </div><a href="#hashlink">Install Cuttlebelle-#hashlink</a></div><div class="what__section what__section--right">image</div></section></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div>---
+&lt;/header&gt;</code></pre></details></div><div id="homepage/what" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">homepage/what</h2><div class="cuttlebelle-docs__main__component__example"><div><section class="what"><div class="what__section what__section--left"><div class="what__section__body"><div><p>The year 1866 was signalised by a remarkable incident, a mysterious and puzzling phenomenon, which doubtless no one has yet forgotten. Not to mention rumours which agitated the maritime population and excited the public mind, even in the interior of continents, seafaring men were particularly excited. Merchants, common sailors, captains of vessels, skippers, both of Europe and America, naval officers of all countries, and the Governments of several States on the two continents, were deeply interested in the matter.</p> <p>For some time past vessels had been met by &quot;an enormous thing,&quot; a long object, spindle-shaped, occasionally phosphorescent, and infinitely larger and more rapid in its movements than a whale.</p> </div><a class="btn" href="#hashlink">Install Cuttlebelle</a></div></div><div class="what__section what__section--right"><div class="what__section__body">image</div></div></section></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div>---
 <span class="cuttlebelle-yaml-line">layout: homepage/what</span>
 <span class="cuttlebelle-yaml-line">cta:
   text: 'Install Cuttlebelle'
@@ -228,13 +228,17 @@ continents, were deeply interested in the matter.
 For some time past vessels had been met by "an enormous thing," a long object, spindle-shaped, occasionally phosphorescent, and infinitely larger and more rapid
 in its movements than a whale...</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;section class=&quot;what&quot;&gt;
   &lt;div class=&quot;what__section what__section--left&quot;&gt;
-    &lt;div&gt;
-      &lt;p&gt;The year 1866 was signalised by a remarkable incident, a mysterious and puzzling phenomenon, which doubtless no one has yet forgotten. Not to mention rumours which agitated the maritime population and excited the public mind, even in the interior
-        of continents, seafaring men were particularly excited. Merchants, common sailors, captains of vessels, skippers, both of Europe and America, naval officers of all countries, and the Governments of several States on the two continents, were deeply
-        interested in the matter.&lt;/p&gt;
-      &lt;p&gt;For some time past vessels had been met by &amp;quot;an enormous thing,&amp;quot; a long object, spindle-shaped, occasionally phosphorescent, and infinitely larger and more rapid in its movements than a whale.&lt;/p&gt;
+    &lt;div class=&quot;what__section__body&quot;&gt;
+      &lt;div&gt;
+        &lt;p&gt;The year 1866 was signalised by a remarkable incident, a mysterious and puzzling phenomenon, which doubtless no one has yet forgotten. Not to mention rumours which agitated the maritime population and excited the public mind, even in the interior
+          of continents, seafaring men were particularly excited. Merchants, common sailors, captains of vessels, skippers, both of Europe and America, naval officers of all countries, and the Governments of several States on the two continents, were
+          deeply interested in the matter.&lt;/p&gt;
+        &lt;p&gt;For some time past vessels had been met by &amp;quot;an enormous thing,&amp;quot; a long object, spindle-shaped, occasionally phosphorescent, and infinitely larger and more rapid in its movements than a whale.&lt;/p&gt;
+      &lt;/div&gt;
+      &lt;a class=&quot;btn&quot; href=&quot;#hashlink&quot;&gt;Install Cuttlebelle&lt;/a&gt;
     &lt;/div&gt;
-    &lt;a href=&quot;#hashlink&quot;&gt;Install Cuttlebelle-#hashlink&lt;/a&gt;
   &lt;/div&gt;
-  &lt;div class=&quot;what__section what__section--right&quot;&gt;image&lt;/div&gt;
+  &lt;div class=&quot;what__section what__section--right&quot;&gt;
+    &lt;div class=&quot;what__section__body&quot;&gt;image&lt;/div&gt;
+  &lt;/div&gt;
 &lt;/section&gt;</code></pre></details></div></div></main></body></html>
