--- a/code/sass/components/_what.scss
+++ b/code/sass/components/_what.scss
@@ -1,7 +1,11 @@
 .what {
-	padding: 4rem 2rem;
+	padding: 0;
 	background-color: $color-Background-light;
 	overflow: hidden;
+
+	@media screen and ( min-width: 480px ) {
+		padding: 2rem 1rem;
+	}
 
 	@media screen and ( min-width: 1000px ) {
 		padding: 8rem 5rem;
@@ -21,8 +25,12 @@
 }
 
 .what__section__body {
-	margin: 2rem 4rem;
+	margin: 2rem 1rem;
 	max-width: 42em;
+
+	@media screen and ( min-width: 650px ) {
+		margin: 2rem 4rem;
+	}
 
 	.btn {
 		margin-top: 1rem;
