added why section
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -7,4 +7,6 @@
 @import 'components/header';
 @import 'components/nav';
 @import 'components/btn';
+@import 'components/body';
 @import 'components/what';
+@import 'components/why';
