--- a/code/sass/components/_btn.scss
+++ b/code/sass/components/_btn.scss
@@ -5,6 +5,7 @@
 	color: $color-Text;
 	border-radius: 8px;
 	border: 3px solid $color-Text;
+	font-size: 1.125rem;
 	text-decoration: none;
 	transition: background 0.2s ease;
 
