--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'components/nav';
 @import 'components/btn';
 @import 'components/body';
-@import 'components/what';
-@import 'components/why';
+@import 'components/cta';
+@import 'components/tiles';
 @import 'components/footer';
+@import 'components/examples';
