added cheat sheet content
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/base/_variables.scss
+++ b/code/sass/base/_variables.scss
@@ -4,4 +4,5 @@ $color-Hero-Background: #00a887;
 $color-Text: #06262d;
 $color-Background: #ededed;
 $color-Background-light: #f5f5f5;
+$color-Background-dark: darken( $color-Background, 20% );
 $color-Focus: #ff5400;
