--- a/components/files/cheats/index.html
+++ b/components/files/cheats/index.html
@@ -4,8 +4,8 @@
 Still the same paragraph
 
 New paragraph
-</code></pre></div></div></div></details><details class="cheat__item" id="Markdown-Headline"><summary class="cheat__item__headline">Headline</summary><div class="cheat__item__details"><div class="cheat__item__details__description"><div><p>To add a headline add the <code>#</code> symbol in-front of your line. The amount of hashes represents the headline level.</p>
-</div></div><div class="cheat__item__details__example"><div><pre><code>
+</code></pre></div></div></div></details><details class="cheat__item" id="Markdown-Bold"><summary class="cheat__item__headline">Bold</summary><div class="cheat__item__details"><div class="cheat__item__details__description"><div><p>Making some text bold only requires you to use <code>**</code>.</p>
+</div></div><div class="cheat__item__details__example"><div><pre><code>Text with a single **bold** word.
 </code></pre></div></div></div></details></div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: cheats/cheat</span>
 <span class="cuttlebelle-yaml-line">section: Markdown</span>
 <span class="cuttlebelle-yaml-line">description: Markdown is used to help ...</span>
@@ -19,13 +19,11 @@ New paragraph
 
       New paragraph
       ```
-  - headline: Headline
-    description: To add a headline add the `#` symbol in-front of your line. The amount of hashes represents the headline level.
+  - headline: Bold
+    description: Making some text bold only requires you to use `**`.
     example: |
       ```
-      # A headline level 1
-      ## A headline level 2
-      ### A headline level 3
+      Text with a single **bold** word.
       ```</span>
 </div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div id=&quot;Markdown&quot; class=&quot;cheat&quot;&gt;
   &lt;h3 class=&quot;cheat__headline&quot;&gt;Markdown&lt;/h3&gt;
@@ -51,16 +49,16 @@ New paragraph
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/details&gt;
-  &lt;details class=&quot;cheat__item&quot; id=&quot;Markdown-Headline&quot;&gt;
-    &lt;summary class=&quot;cheat__item__headline&quot;&gt;Headline&lt;/summary&gt;
+  &lt;details class=&quot;cheat__item&quot; id=&quot;Markdown-Bold&quot;&gt;
+    &lt;summary class=&quot;cheat__item__headline&quot;&gt;Bold&lt;/summary&gt;
     &lt;div class=&quot;cheat__item__details&quot;&gt;
       &lt;div class=&quot;cheat__item__details__description&quot;&gt;
         &lt;div&gt;
-          &lt;p&gt;To add a headline add the &lt;code&gt;#&lt;/code&gt; symbol in-front of your line. The amount of hashes represents the headline level.&lt;/p&gt;
+          &lt;p&gt;Making some text bold only requires you to use &lt;code&gt;**&lt;/code&gt;.&lt;/p&gt;
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;cheat__item__details__example&quot;&gt;
-        &lt;div&gt;&lt;pre&gt;&lt;code&gt;
+        &lt;div&gt;&lt;pre&gt;&lt;code&gt;Text with a single **bold** word.
 &lt;/code&gt;&lt;/pre&gt;&lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
