--- a/code/sass/base/_structure.scss
+++ b/code/sass/base/_structure.scss
@@ -70,11 +70,12 @@ code {
 	background-color: $color-Background;
 	border-radius: 3px;
 	color: #000;
+	overflow: auto;
 
 	pre > & {
 		display: block;
 		padding: 0.6em 1em;
-		border: 3px solid darken( $color-Background, 20% );
+		border: 3px solid $color-Background-dark;
 		border-radius: 0;
 	}
 }
