added focus styling to cheats
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/components/_cheats.scss
+++ b/code/sass/components/_cheats.scss
@@ -61,6 +61,10 @@ $cheats-border: $color-Text;
 	padding: 0.5rem;
 	cursor: pointer;
 	background-color: $color-Background-light;
+
+	&:focus {
+		outline: 3px solid $color-Focus;
+	}
 }
 
 .cheat__item__details__description {
