--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -2,6 +2,7 @@
 @import 'base/reset';
 @import 'base/variables';
 @import 'base/structure';
+@import 'base/highlighter';
 
 // Our components
 @import 'components/header';
