--- a/components/files/cheats/index.html
+++ b/components/files/cheats/index.html
@@ -1,19 +1,21 @@
 <html><head><title>Category cheats</title><link rel="stylesheet" href="../../assets/style.css"/><link rel="stylesheet" href="../../assets/pages/css/style.css"/></head><body class="cuttlebelle-docs"><aside class="cuttlebelle-docs__aside"><div class="cuttlebelle-docs__wrapper"><a class="cuttlebelle-docs__aside__headline" href="../..">Documentation</a><ul class="cuttlebelle-nav cuttlebelle-nav--level-0"><li class="cuttlebelle-nav__item cuttlebelle-nav__item--has-nested"><a class="cuttlebelle-nav__item__anchor" href="..">index</a><ul class="cuttlebelle-nav cuttlebelle-nav--level-1"><li class="cuttlebelle-nav__item"><span class="cuttlebelle-nav__item__span">cheats</span></li><li class="cuttlebelle-nav__item"><a class="cuttlebelle-nav__item__anchor" href="../homepage">homepage</a></li><li class="cuttlebelle-nav__item"><a class="cuttlebelle-nav__item__anchor" href="../navigation">navigation</a></li></ul></li></ul></div></aside><main class="cuttlebelle-docs__main"><div class="cuttlebelle-docs__wrapper"><h1 class="cuttlebelle-docs__main__headline">Category cheats</h1><p>In this category</p><ul class="cuttlebelle-docs__main__contents"><li class="cuttlebelle-docs__main__contents__item"><a href="#cheats/cheat" class="cuttlebelle-docs__main__contents__item__link">cheats/cheat</a></li><li class="cuttlebelle-docs__main__contents__item"><a href="#cheats/wrapper" class="cuttlebelle-docs__main__contents__item__link">cheats/wrapper</a></li></ul><div id="cheats/cheat" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">cheats/cheat</h2><div class="cuttlebelle-docs__main__component__example"><div><div id="Markdown" class="cheat"><h3 class="cheat__headline">Markdown</h3><div class="cheat__description"><div><p>Markdown is used to help <span class="markdown-ellipsis">&hellip;</span></p>
 </div></div><details class="cheat__item" id="Markdown-Paragraphline-break"><summary class="cheat__item__headline">Paragraph/line break</summary><div class="cheat__item__details"><div class="cheat__item__details__description"><div><p>To create a paragraph simply add a line of text. To add a line break add two empty lines.</p>
-</div></div><div class="cheat__item__details__example"><div><pre><code>One paragraph
+</div></div><div class="cheat__item__details__example"><div><pre><code class="lang-markdown">One paragraph
 Still the same paragraph
 
 New paragraph
-</code></pre></div></div></div></details><details class="cheat__item" id="Markdown-Bold"><summary class="cheat__item__headline">Bold</summary><div class="cheat__item__details"><div class="cheat__item__details__description"><div><p>Making some text bold only requires you to use <code>**</code>.</p>
-</div></div><div class="cheat__item__details__example"><div><pre><code>Text with a single **bold** word.
-</code></pre></div></div></div></details></div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: cheats/cheat</span>
+</code></pre>
+</div></div></div></details><details class="cheat__item" id="Markdown-Bold"><summary class="cheat__item__headline">Bold</summary><div class="cheat__item__details"><div class="cheat__item__details__description"><div><p>Making some text bold only requires you to use <code>**</code>.</p>
+</div></div><div class="cheat__item__details__example"><div><pre><code class="lang-markdown">Text with a single **bold** word.
+</code></pre>
+</div></div></div></details></div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: cheats/cheat</span>
 <span class="cuttlebelle-yaml-line">section: Markdown</span>
 <span class="cuttlebelle-yaml-line">description: Markdown is used to help ...</span>
 <span class="cuttlebelle-yaml-line">cheats:
   - headline: Paragraph/line break
     description: To create a paragraph simply add a line of text. To add a line break add two empty lines.
     example: |
-      ```
+      ```markdown
       One paragraph
       Still the same paragraph
 
@@ -22,7 +24,7 @@ New paragraph
   - headline: Bold
     description: Making some text bold only requires you to use `**`.
     example: |
-      ```
+      ```markdown
       Text with a single **bold** word.
       ```</span>
 </div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div id=&quot;Markdown&quot; class=&quot;cheat&quot;&gt;
@@ -41,11 +43,12 @@ New paragraph
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;cheat__item__details__example&quot;&gt;
-        &lt;div&gt;&lt;pre&gt;&lt;code&gt;One paragraph
+        &lt;div&gt;&lt;pre&gt;&lt;code class=&quot;lang-markdown&quot;&gt;One paragraph
 Still the same paragraph
 
 New paragraph
-&lt;/code&gt;&lt;/pre&gt;&lt;/div&gt;
+&lt;/code&gt;&lt;/pre&gt;
+        &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/details&gt;
@@ -58,8 +61,9 @@ New paragraph
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;cheat__item__details__example&quot;&gt;
-        &lt;div&gt;&lt;pre&gt;&lt;code&gt;Text with a single **bold** word.
-&lt;/code&gt;&lt;/pre&gt;&lt;/div&gt;
+        &lt;div&gt;&lt;pre&gt;&lt;code class=&quot;lang-markdown&quot;&gt;Text with a single **bold** word.
+&lt;/code&gt;&lt;/pre&gt;
+        &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/details&gt;
