--- a/code/sass/components/_body.scss
+++ b/code/sass/components/_body.scss
@@ -1,16 +1,20 @@
 .body {
-	padding: 2rem 1rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
 	max-width: 42em;
 
 	@media screen and ( min-width: 480px ) {
-		padding: 4rem 2rem;
+		padding-left: 2rem;
+		padding-right: 2rem;
 	}
 
 	@media screen and ( min-width: 650px ) {
-		padding: 2rem 4rem;
+		padding-left: 4rem;
+		padding-right: 4rem;
 	}
 
 	@media screen and ( min-width: 1000px ) {
-		padding: 10rem 8rem;
+		padding-left: 8rem;
+		padding-right: 8rem;
 	}
 }
