--- a/code/sass/components/_examples.scss
+++ b/code/sass/components/_examples.scss
@@ -36,8 +36,8 @@
 		@media screen and ( min-width: 650px ) {
 			width: 100%;
 			max-width: 31rem;
-			margin-right: auto;
 			margin-left: auto;
+			margin-right: auto;
 		}
 
 		@media screen and ( min-width: 1110px ) {
@@ -46,6 +46,8 @@
 			justify-content: space-between;
 			float: left;
 			width: 33.333333333%;
+			margin-right: 1rem;
+			margin-left: 1rem;
 		}
 	}
 }
@@ -65,6 +67,10 @@
 	.examples__list__body {
 		text-align: center;
 	}
+
+	.examples__list__example {
+		margin: 0;
+	}
 }
 
 .examples__list__headline {
@@ -80,15 +86,4 @@
 .examples__list__example {
 	display: block;
 	margin-top: 2rem;
-	font-size: 1rem;
-	background-color: #fff;
-	padding: 0.5rem 1rem;
-	border: 3px solid $color-Hero-Background;
-
-	&:before {
-		content: '$';
-		display: inline-block;
-		color: $color-Hero-Background;
-		margin-right: 0.5rem;
-	}
 }
