--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'components/header';
 @import 'components/nav';
 @import 'components/btn';
+@import 'components/code';
 @import 'components/body';
 @import 'components/cta';
 @import 'components/tiles';
