fixed exmples docs, added same placeholder for tiles
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/components/files/homepage/index.html
+++ b/components/files/homepage/index.html
@@ -143,12 +143,12 @@ in its movements than a whale...</div></pre><details class="cuttlebelle-docs__ma
       &lt;p class=&quot;code__command&quot;&gt;cuttlebelle&lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/section&gt;</code></pre></details></div><div id="homepage/examples" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">homepage/examples</h2><div class="cuttlebelle-docs__main__component__example"><div><section class="examples"><h2 class="examples__headline">Examples another static site generator?</h2><ul class="examples__list"><li><div><h3 class="examples__list__headline">Install cuttlebelle</h3><div class="examples__list__body"><div><p>Install Cuttlebelle globally from <a href="https://www.npmjs.com/" rel="external">npm</a>. Now the <code>cuttlebelle</code> command is available to you globally.</p>
+&lt;/section&gt;</code></pre></details></div><div id="homepage/examples" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">homepage/examples</h2><div class="cuttlebelle-docs__main__component__example"><div><section class="examples"><h2 class="examples__headline">Why another static site generator?</h2><ul class="examples__list"><li><div><h3 class="examples__list__headline">Install cuttlebelle</h3><div class="examples__list__body"><div><p>Install Cuttlebelle globally from <a href="https://www.npmjs.com/" rel="external">npm</a>. Now the <code>cuttlebelle</code> command is available to you globally.</p>
 </div></div></div><div class="examples__list__example"><code class="code"><p class="code__command">npm install cuttlebelle -g</p></code></div></li><li><div><h3 class="examples__list__headline">Get started</h3><div class="examples__list__body"><div><p>Before you start adding your files and pages, run the <code>init</code> command to get you started quickly with some common components.</p>
 </div></div></div><div class="examples__list__example"><code class="code"><p class="code__command">cuttlebelle --init</p></code></div></li><li><div><h3 class="examples__list__headline">Compile your website</h3><div class="examples__list__body"><div><p>Now compile your website into the <code>site</code> folder. The watch will wait after for any additional changes you make to your files and only run on those
 pages you change affected.</p>
 </div></div></div><div class="examples__list__example"><code class="code"><p class="code__command">cuttlebelle --watch</p></code></div></li></ul></section></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: homepage/examples</span>
-<span class="cuttlebelle-yaml-line">headline: Examples another static site generator?</span>
+<span class="cuttlebelle-yaml-line">headline: Why another static site generator?</span>
 <span class="cuttlebelle-yaml-line">examples:
   - headline: Install cuttlebelle
     text: |
@@ -164,7 +164,7 @@ pages you change affected.</p>
       pages you change affected.
     example: cuttlebelle --watch</span>
 </div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;section class=&quot;examples&quot;&gt;
-  &lt;h2 class=&quot;examples__headline&quot;&gt;Examples another static site generator?&lt;/h2&gt;
+  &lt;h2 class=&quot;examples__headline&quot;&gt;Why another static site generator?&lt;/h2&gt;
   &lt;ul class=&quot;examples__list&quot;&gt;
     &lt;li&gt;
       &lt;div&gt;
