added footer and other icons
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/components/_cheats.scss
+++ b/code/sass/components/_cheats.scss
@@ -1,7 +1,7 @@
 $cheats-border: $color-Text;
 
 .cheats {
-	margin: 0 2rem 0 2rem;
+	margin: 0 2rem 5rem 2rem;
 	overflow: hidden;
 
 	@media screen and ( min-width: 650px ) {
