--- a/code/sass/components/_cta.scss
+++ b/code/sass/components/_cta.scss
@@ -30,10 +30,10 @@
 
 .cta__section__body,
 .cta__section--bottom {
-	margin-bottom: 4rem;
+	margin-bottom: 5rem;
 
 	@media screen and ( min-width: 1000px ) {
-		margin-top: 3rem;
+		margin-top: 4rem;
 	}
 }
 
@@ -65,6 +65,7 @@
 .cta__section__logo {
 	display: block;
 	margin: 2rem auto 0 auto;
+	padding: 0 1rem;
 	max-height: 20rem;
 	width: auto;
 }
