--- a/code/sass/components/_header.scss
+++ b/code/sass/components/_header.scss
@@ -5,6 +5,7 @@
 	background-color: $color-Hero-Background-light;
 	background: linear-gradient( 135deg, $color-Hero-Background-light 0%, #007565 100% );
 	overflow: hidden;
+	perspective: 10px;
 	z-index: 10;
 
 	&:before,
@@ -119,6 +120,7 @@
 	left: 50%;
 	width: 320px;
 	margin-left: -160px;
+	z-index: 20;
 }
 
 .header__logo__logo,
@@ -180,59 +182,61 @@
 //
 .header__bubble {
 	position: absolute;
-	left: 8.8rem;
-	top: 0;
-	height: 200px;
-	width: 200px;
-	box-shadow: 0 20px 30px rgba( 0, 117, 101, 0.1 ), inset 0px 10px 30px 5px rgba( 255, 255, 255, 1 );
+	left: 14.5rem;
+	top: 5rem;
+	height: 40px;
+	width: 40px;
+	box-shadow: 0 5px 7px rgba( 0, 117, 101, 0.1 ), inset 2px 3px 6px 0px rgba( 255,255,255,0.8 );
 	border-radius: 50%;
-	transform: scale( 0.2 );
-	// animation: hover 20s ease-in-out infinite;
 
 	&:after {
 		content: '';
 		position: absolute;
-		left: 10px;
-		height: 180px;
-		width: 180px;
+		left: 1px;
+		width: 40px;
+		height: 40px;
 		border-radius: 50%;
-		background: radial-gradient( ellipse at center, rgba( 255, 255, 255, 0.5 ) 0%, rgba( 255, 255, 255, 0 ) 70% );
-		box-shadow: inset 0 20px 30px rgba( 255, 255, 255, 0.3 );
+		background: radial-gradient( ellipse at center, rgba( 255, 255, 255, 0.5 ) 0%, rgba( 255, 255, 255, 0 ) 50% );
+		box-shadow: inset 0 3px 8px rgba( 255, 255, 255, 0.6 );
 	}
 }
 
+.header__bubble--floater {
+	transform: scale( 0.2 );
+	left: -49px;
+	top: 40px;
+	z-index: 10;
+}
+
+.header__bubble--floater1 {
+	transform: scale( 0.1 );
+}
+
+.header__bubble--floater2 {
+	transform: scale( 0.3 );
+}
+
+.header__bubble--floater3 {
+	transform: scale( 0.4 );
+}
+
 .header__bubble--left {
-	left: -1.5rem;
-	// animation-delay: -3s;
+	left: 3rem;
 }
 
 .header__bubble__icon {
 	position: absolute;
-	left: 3.2rem;
-	top: 3.4rem;
+	left: 0.6rem;
+	top: 0.7rem;
 	width: 50%;
 	height: auto;
 }
 
 .header__bubble__icon--content {
 	width: 35%;
-	left: 4rem;
-	top: 4rem;
+	left: 0.8rem;
+	top: 0.8rem;
 }
-
-// @keyframes hover {
-// 	from {
-// 		top: 0;
-// 	}
-
-// 	50% {
-// 		top: -6px;
-// 	}
-
-// 	to {
-// 		top: 0;
-// 	}
-// }
 
 
 // -------------------------------------------------------------------------------------------------------------------------------------------------------------
